--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   google_maps_flutter: ^2.0.6
   dio: ^4.0.0
   animate_do: ^2.0.0
+  polyline: ^1.0.2
 
 dev_dependencies:
   flutter_test:
